Add step to build xlsx decrypter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,6 +156,16 @@ jobs:
           key: allocation-manager-v1-{{ checksum "Gemfile.lock" }}
           paths:
             - ~/repo/vendor/bundle
+      - run:
+          name: Build the tool for decrypting office files
+          command: |
+            cd /tmp
+            git clone https://github.com/herumi/cybozulib
+            git clone https://github.com/herumi/msoffice
+            cd msoffice
+            make -j RELEASE=1
+            mv /tmp/msoffice/bin/msoffice-crypt.exe ~/repo/bin/msoffice-crypt
+            ls bin
       - persist_to_workspace:
           root: .
           paths:
@@ -225,7 +235,6 @@ jobs:
           at: ~/repo
       - setup_remote_docker:
           docker_layer_caching: true
-      - *install_aws_cli
       - *build_docker_image
       - *push_docker_image
 
