--- a/deploy/production/dashboard.yaml
+++ b/deploy/production/dashboard.yaml
@@ -117,21 +117,21 @@ data:
           "steppedLine": false,
           "targets": [
             {
-              "expr": "sum by(pod_name)(container_memory_usage_bytes{namespace='$namespace'})",
+              "expr": "(container_memory_usage_bytes{namespace='$namespace',container_name='allocation-manager'})",
               "format": "time_series",
               "intervalFactor": 1,
               "legendFormat": "POD: {{ pod_name}}",
               "refId": "A"
             },
             {
-              "expr": "avg(kube_pod_container_resource_requests_memory_bytes{namespace='$namespace'})",
+              "expr": "avg(kube_pod_container_resource_requests_memory_bytes{namespace='$namespace',container='allocation-manager'})",
               "format": "time_series",
               "intervalFactor": 2,
               "legendFormat": "Requested (soft limit)",
               "refId": "C"
             },
             {
-              "expr": "avg(kube_pod_container_resource_limits_memory_bytes{namespace='$namespace'})",
+              "expr": "avg(kube_pod_container_resource_limits_memory_bytes{namespace='$namespace',container='allocation-manager'})",
               "format": "time_series",
               "intervalFactor": 2,
               "legendFormat": "Limit (hard limit)",
