--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,6 +70,9 @@ Layout/DotPosition:
 Style/FormatString:
   Enabled: false
 
+Style/MultilineBlockChain:
+  Enabled: false
+
 # It's not really clearer to replace every if with a return if.
 Style/GuardClause:
   Enabled: false
