--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 deploy/*secrets.yaml filter=git-crypt diff=git-crypt
 deploy/staging/*secrets.yaml filter=git-crypt diff=git-crypt
 deploy/production/*secrets.yaml filter=git-crypt diff=git-crypt
+deploy/preprod/*secrets.yaml filter=git-crypt diff=git-crypt
