--- a/deploy/preprod/shared-environment.yaml
+++ b/deploy/preprod/shared-environment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: shared-environment
 data:
   PROMETHEUS_METRICS: "on"
+  AUTO_DELIUS_IMPORT: "CFI,UFI"
   RAILS_ENV: "production"
   RAILS_SERVE_STATIC_FILES: "true"
   RAILS_WEB_CONCURRENCY: "5"
