update mailbox folder to be prefixed with Data/

--- a/deploy/preprod/shared-environment.yaml
+++ b/deploy/preprod/shared-environment.yaml
@@ -5,6 +5,7 @@ metadata:
 data:
   PROMETHEUS_METRICS: "on"
   AUTO_DELIUS_IMPORT: "CFI,UFI"
+  DELIUS_EMAIL_FOLDER: "Data/prod"
   RAILS_ENV: "production"
   RAILS_SERVE_STATIC_FILES: "true"
   RAILS_WEB_CONCURRENCY: "5"
