Update the resources available to the pods
Our pods are using more resources (CPU) than they have available, so
this PR increases the CPU share available to each pod to match roughly
what the current usage is, as determined by `top pods`

--- a/deploy/preprod/deployment.yaml
+++ b/deploy/preprod/deployment.yaml
@@ -41,6 +41,13 @@ spec:
               port: 3000
             initialDelaySeconds: 10
             periodSeconds: 60
+          resources:
+            limits:
+              memory: "1Gi"
+              cpu: "100m"
+            requests:
+              memory: "500Mi"
+              cpu: "50m"
           envFrom:
             - configMapRef:
                 name: shared-environment
