--- a/deploy/production/deployment.yaml
+++ b/deploy/production/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     kubernetes.io/change-cause: "<to be filled in deploy job command>"
 spec:
-  replicas: 3
+  replicas: 5
   revisionHistoryLimit: 1
   minReadySeconds: 10
   strategy:
@@ -43,11 +43,9 @@ spec:
             periodSeconds: 60
           resources:
             limits:
-              memory: "1Gi"
-              cpu: "100m"
+              cpu: "150m"
             requests:
-              memory: "500Mi"
-              cpu: "50m"
+              cpu: "100m"
           envFrom:
             - configMapRef:
                 name: shared-environment
@@ -84,6 +82,13 @@ spec:
                 name: shared-environment
             - secretRef:
                 name: allocation-manager-secrets
+          resources:
+            limits:
+              memory: "500Mi"
+              cpu: "100m"
+            requests:
+              memory: "250Mi"
+              cpu: "50m"
           env:
             - name: POSTGRES_HOST
               valueFrom:
@@ -111,6 +116,13 @@ spec:
           command: ['sh', '-c', "bundle exec prometheus_exporter"]
           ports:
             - containerPort: 9394
+          resources:
+            limits:
+              memory: "200Mi"
+              cpu: "50m"
+            requests:
+              memory: "100Mi"
+              cpu: "10m"
           livenessProbe:
             httpGet:
               path: /metrics
