--- a/deploy/preprod/cronjob.yaml
+++ b/deploy/preprod/cronjob.yaml
@@ -65,7 +65,7 @@ spec:
             - name: delius-import
               image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
               imagePullPolicy: Always
-              command: ['sh', '-c', "bundle exec rails r DeliusImportJob.perform_now"]
+              command: ['sh', '-c', "bundle exec rails r DeliusImportJob.perform_later"]
               envFrom:
                 - configMapRef:
                     name: shared-environment
