--- a/deploy/preprod/cronjob.yaml
+++ b/deploy/preprod/cronjob.yaml
@@ -4,10 +4,9 @@ metadata:
   name: offender-manager-process-movements
 spec:
   schedule: "0 2 * * *"
-  startingDeadlineSeconds: 10
   concurrencyPolicy: Forbid
-  successfulJobsHistoryLimit: 3
-  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 2
+  failedJobsHistoryLimit: 2
   jobTemplate:
     spec:
       template:
@@ -53,10 +52,9 @@ metadata:
   name: offender-manager-delius-import
 spec:
   schedule: "15 20 * * *"
-  startingDeadlineSeconds: 10
   concurrencyPolicy: Forbid
-  successfulJobsHistoryLimit: 3
-  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 2
+  failedJobsHistoryLimit: 2
   jobTemplate:
     spec:
       template:
@@ -66,6 +64,13 @@ spec:
               image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
               imagePullPolicy: Always
               command: ['sh', '-c', "bundle exec rails r DeliusImportJob.perform_later"]
+              resources:
+                limits:
+                  memory: "2Gi"
+                  cpu: "250m"
+                requests:
+                  memory: "1Gi"
+                  cpu: "100m"
               envFrom:
                 - configMapRef:
                     name: shared-environment
