--- a/deploy/preprod/cronjob.yaml
+++ b/deploy/preprod/cronjob.yaml
@@ -51,7 +51,7 @@ kind: CronJob
 metadata:
   name: offender-manager-delius-import
 spec:
-  schedule: "15 20 * * *"
+  schedule: "15 21 * * 1-5"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 2
