Upgrade to v3 of the govuk design system
v3 of the design system has been released and so this PR updates the
version used to bring it up to date.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "offender-management-allocation-client",
   "private": true,
   "dependencies": {
-    "govuk-frontend": "2.8.0"
+    "govuk-frontend": "^3.1.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
