--- a/deploy/production/deployment.yaml
+++ b/deploy/production/deployment.yaml
@@ -43,7 +43,7 @@ spec:
             periodSeconds: 60
           resources:
             limits:
-              memory: "1Gi"
+              memory: "1500Mi"
               cpu: "150m"
             requests:
               memory: "500Mi"
