--- a/deploy/staging/deployment.yaml
+++ b/deploy/staging/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     kubernetes.io/change-cause: "<to be filled in deploy job command>"
 spec:
-  replicas: 3
+  replicas: 5
   revisionHistoryLimit: 1
   minReadySeconds: 10
   strategy:
@@ -43,7 +43,7 @@ spec:
             periodSeconds: 60
           resources:
             limits:
-              memory: "1Gi"
+              memory: "1500Mi"
               cpu: "150m"
             requests:
               memory: "500Mi"
