--- a/deploy/preprod/shared-environment.yaml
+++ b/deploy/preprod/shared-environment.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   PROMETHEUS_METRICS: "on"
   AUTO_DELIUS_IMPORT: "CFI,UKI"
-  DELIUS_EMAIL_FOLDER: "Data/prod"
+  DELIUS_EMAIL_FOLDER: "Data/preprod"
   RAILS_ENV: "production"
   RAILS_SERVE_STATIC_FILES: "true"
   RAILS_WEB_CONCURRENCY: "5"
