POM-365 Turn on auto delius for more prisons
This PR enables the auto delius import for Leeds, Wormwood Scrubs and
Durham (in addition to existing Usk).

We should not merge this until LJD has spoken to prisons

--- a/deploy/preprod/shared-environment.yaml
+++ b/deploy/preprod/shared-environment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: shared-environment
 data:
   PROMETHEUS_METRICS: "on"
-  AUTO_DELIUS_IMPORT: "CFI,UKI"
+  AUTO_DELIUS_IMPORT: "UKI,LEI,WSI,DMI"
   DELIUS_EMAIL_FOLDER: "Data/preprod"
   RAILS_ENV: "production"
   RAILS_SERVE_STATIC_FILES: "true"
