--- a/deploy/production/shared-environment.yaml
+++ b/deploy/production/shared-environment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: shared-environment
 data:
   PROMETHEUS_METRICS: "on"
-  AUTO_DELIUS_IMPORT: "UKI,LEI,WSI,DMI"
+  AUTO_DELIUS_IMPORT: "UKI,LEI,WSI,DMI,CFI"
   DELIUS_EMAIL_FOLDER: "Data/prod"
   RAILS_ENV: "production"
   RAILS_SERVE_STATIC_FILES: "true"
