--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -100,6 +100,9 @@ Metrics/LineLength:
   Exclude:
     - 'spec/**/*'
 
+Metrics/CyclomaticComplexity:
+  Max: 10
+
 # Don't worry about long methods in specs.
 Metrics/MethodLength:
   Max: 20
