--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -100,6 +100,9 @@ Metrics/LineLength:
   Exclude:
     - 'spec/**/*'
 
+Metrics/PerceivedComplexity:
+  Max: 10
+
 Metrics/CyclomaticComplexity:
   Max: 10
 
