Set RAILS_LOG_TO_STDOUT for sidekiq
Set RAILS_LOG_TO_STDOUT so that sidekiq will log to stdout and allow us
to see output in kibana.

--- a/deploy/production/deployment.yaml
+++ b/deploy/production/deployment.yaml
@@ -93,6 +93,8 @@ spec:
               memory: "250Mi"
               cpu: "50m"
           env:
+            - name: RAILS_LOG_TO_STDOUT
+              value: "on"
             - name: POSTGRES_HOST
               valueFrom:
                 secretKeyRef:
