--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "postdeploy": "bundle exec rails db:migrate db:seed heroku:post_deploy",
-    "pr-predestroy": "bundle exec rails heroku:pr_destroy"
+    "postdeploy": "bundle exec rails db:migrate db:seed"
   },
   "addons": [
     "heroku-postgresql",
