--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "postdeploy": "bundle exec rails db:seed",
-    "pr-predestroy": "bundle exec rake heroku:pr_destroy"
+    "postdeploy": "bundle exec rails db:seed"
   },
   "addons": [
     {
