Add new app/data directory to git-crypt and update pre-commit hook

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ deploy/*secrets.yaml filter=git-crypt diff=git-crypt
 deploy/staging/*secrets.yaml filter=git-crypt diff=git-crypt
 deploy/production/*secrets.yaml filter=git-crypt diff=git-crypt
 deploy/preprod/*secrets.yaml filter=git-crypt diff=git-crypt
+app/data/*.yaml filter=git-crypt diff=git-crypt
