Always enable VCR in tests (no effect on webmock)
This commit changes our rspec configuration, so that VCR is always
enabled - meaning our build server's test run now matches local test
runs.

I hope this'll tighten the feedback loop with testing, and avoid "I
thought this was fine but it's broken on the build server" pain.

I dug through commit history a little to try and determine the reason
for the distinct behaviour originally - I think it's the remnants of
experimenting with webmock/VCR, but it's possible I've missed
something. If so, it's cheap to revert this change.

Note that this doesn't change the VCR/webmock interactions - this
just makes it so VCR is always in context, but it may still defer to
webmock on a test-by-test basis. At the time of writing, I believe
this should happen when no casette is specified, but have seen other
behaviour that undermines that understanding.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,7 +201,7 @@ jobs:
           name: Run tests
           command: |
             ./cc-test-reporter before-build
-            VCR=1 bundle exec rake
+            bundle exec rake
             ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
           environment:
             ALLOCATION_MANAGER_HOST: https://allocation-manager-staging.apps.live-1.cloud-platform.service.justice.gov.uk
