--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,7 +20,6 @@ AllCops:
     - '**/Rakefile'
     - '**/Vagrantfile'
     - 'app/views/api/**/*.json.jbuilder'
-    - 'config/initializers/simple_form.rb'
     - 'config/initializers/assets.rb'
     - 'config/unicorn.rb'
     - 'spec/rails_helper.rb'
@@ -100,7 +99,7 @@ Naming/FileName:
 Metrics/ClassLength:
   Max: 200
 
-Layout/LineLength:
+Metrics/LineLength:
   Max: 120
   Exclude:
     - 'spec/**/*'
@@ -241,6 +240,7 @@ Rails/SkipsModelValidations:
 
 Rails/ApplicationRecord:
   Enabled: false
+
 Rails/ApplicationJob:
   Enabled: false
 
