POM-658 - display N/A for handover dates if we are COM responsible

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,7 @@ AllCops:
     - 'lib/tasks/elasticsearch.rake'
     - 'spec/dummy/db/**/*'
     - 'config/routes.rb'
+    - 'spec/factories/*.rb'
 
 Style/MultilineBlockChain:
   Enabled: false
