Use dynamic Redis credentials
Credentials for our Redis instance are provided to us dynamically
via Kubernetes secrets in the Cloud Platform. Despite that, we were
actually relying on hardcoded credentials stored in our own environment
variables secret file.

This commit removes the hardcoded credentials and replaces them with the
dynamic ones. They're surfaced to our rails app as the environment
variable `REDIS_URL`.

This will protect us against future changes in these credentials –
for example when the Redis password is rotated for security purposes,
our app will automatically pick up the change and use the new password.

--- a/deploy/preprod/deployment.yaml
+++ b/deploy/preprod/deployment.yaml
@@ -68,6 +68,11 @@ spec:
                 secretKeyRef:
                   name: allocation-rds-instance-output
                   key: postgres_user
+            - name: REDIS_URL
+                valueFrom:
+                  secretKeyRef:
+                    name: elasticache-offender-management-allocation-manager-token-cache-preprod
+                    key: url
         - name: allocation-manager-sidekiq
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
@@ -101,6 +106,11 @@ spec:
                 secretKeyRef:
                   name: allocation-rds-instance-output
                   key: postgres_user
+            - name: REDIS_URL
+                valueFrom:
+                  secretKeyRef:
+                    name: elasticache-offender-management-allocation-manager-token-cache-preprod
+                    key: url
         - name: allocation-manager-metrics
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
