--- a/deploy/staging/deployment.yaml
+++ b/deploy/staging/deployment.yaml
@@ -75,6 +75,11 @@ spec:
                 secretKeyRef:
                   name: allocation-rds-instance-output
                   key: postgres_user
+            - name: REDIS_URL
+              valueFrom:
+               secretKeyRef:
+                 name: elasticache-offender-management-allocation-manager-token-cache-staging
+                 key: url
         - name: allocation-manager-sidekiq
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
@@ -107,6 +112,11 @@ spec:
                 secretKeyRef:
                   name: allocation-rds-instance-output
                   key: postgres_user
+            - name: REDIS_URL
+                valueFrom:
+                  secretKeyRef:
+                    name: elasticache-offender-management-allocation-manager-token-cache-staging
+                    key: url
         - name: allocation-manager-metrics
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
