POM-759 add REDIS_URL to cronjob so that movements:process runs overnight

--- a/deploy/preprod/cronjob.yaml
+++ b/deploy/preprod/cronjob.yaml
@@ -44,6 +44,11 @@ spec:
                   secretKeyRef:
                     name: allocation-rds-instance-output
                     key: postgres_user
+              - name: REDIS_URL
+                valueFrom:
+                  secretKeyRef:
+                    name: elasticache-offender-management-allocation-manager-token-cache-preprod
+                    key: url
           restartPolicy: OnFailure
 ---
 apiVersion: batch/v1beta1
