--- a/deploy/production/cronjob.yaml
+++ b/deploy/production/cronjob.yaml
@@ -45,6 +45,11 @@ spec:
                   secretKeyRef:
                     name: allocation-rds-instance-output
                     key: postgres_user
+              - name: REDIS_URL
+                valueFrom:
+                  secretKeyRef:
+                    name: elasticache-offender-management-allocation-manager-token-cache-production
+                    key: url
           restartPolicy: OnFailure
 ---
 apiVersion: batch/v1beta1
