--- a/deploy/preprod/cronjob.yaml
+++ b/deploy/preprod/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: offender-manager-process-movements
 spec:
-  schedule: "0 2 * * *"
+  schedule: "30 * * * *"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 2
@@ -97,4 +97,9 @@ spec:
                     secretKeyRef:
                       name: allocation-rds-instance-output
                       key: postgres_user
+                - name: REDIS_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: elasticache-offender-management-allocation-manager-token-cache-preprod
+                      key: url
           restartPolicy: OnFailure
