--- a/deploy/preprod/cronjob.yaml
+++ b/deploy/preprod/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: offender-manager-process-movements
 spec:
-  schedule: "30 * * * *"
+  schedule: "*/20 * * * *"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 2
