--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,11 +146,8 @@ jobs:
             - allocation-manager-v2-{{ checksum "Gemfile.lock" }}
             - allocation-manager-v2-
       - run:
-          name: Update npm
-          command: 'sudo npm install -g npm@latest'
-      - run:
           name: Install GOV.UK frontend modules
-          command: npm install
+          command: yarn install
       - run: bundle check --path vendor/bundle || bundle install --path vendor/bundle
       - save_cache:
           key: allocation-manager-v2-{{ checksum "Gemfile.lock" }}
