--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@ministryofjustice/frontend": "0.0.16-alpha",
+    "accessible-autocomplete": "^2.0.3",
     "govuk-frontend": "^3.4.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
