--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
 
 test:
   <<: *default
-  database: offender-management-allocation-manager_test
+  database: offender-management-allocation-manager_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 production:
   <<: *default
