POM-784 new hostname is PRISON_API_HOST

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ NOMIS_OAUTH_CLIENT_ID="string"
 NOMIS_OAUTH_CLIENT_SECRET="string"
 PROMETHEUS_METRICS=off
 NOMIS_OAUTH_HOST="https://sign-in-dev.hmpps.service.justice.gov.uk"
-NOMIS_API_HOST="https://api-dev.prison.service.justice.gov.uk"
+PRISON_API_HOST="https://api-dev.prison.service.justice.gov.uk"
 KEYWORKER_API_HOST="https://keyworker-api-dev.prison.service.justice.gov.uk"
