POM-608 use search API for page/list of offenders to get recall flag

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ NOMIS_OAUTH_CLIENT_SECRET="string"
 PROMETHEUS_METRICS=off
 NOMIS_OAUTH_HOST="https://sign-in-dev.hmpps.service.justice.gov.uk"
 PRISON_API_HOST="https://api-dev.prison.service.justice.gov.uk"
+PRISONER_SEARCH_HOST="https://prisoner-offender-search-dev.prison.service.justice.gov.uk"
 KEYWORKER_API_HOST="https://keyworker-api-dev.prison.service.justice.gov.uk"
