--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ references:
       - image: ${ECR_ENDPOINT}/cloud-platform/tools:circleci
 
   test_container_config: &test_container_config
-    resource_class: small
+    resource_class: medium
     docker:
       - image: circleci/ruby:2.6.3-node-browsers
         environment:
@@ -20,6 +20,7 @@ references:
           PGUSER: ubuntu
           RACK_ENV: test
           VCR: 1
+          PARALLEL_TEST_PROCESSORS: 6
       - image: circleci/postgres:10.5-alpine
         environment:
           POSTGRES_USER: ubuntu
@@ -212,12 +213,12 @@ jobs:
       - run:
           name: Setup database
           command: |
-            bundle exec rake parallel:setup[3]
+            bundle exec rake parallel:setup
       - run:
           name: Run tests
           command: |
             cc-test-reporter before-build
-            bundle exec rake parallel:spec[3]
+            bundle exec rake parallel:spec
             cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
           environment:
             ALLOCATION_MANAGER_HOST: https://allocation-manager-staging.apps.live-1.cloud-platform.service.justice.gov.uk
