--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NOMIS_OAUTH_HOST="https://sign-in-dev.hmpps.service.justice.gov.uk"
 PRISON_API_HOST="https://api-dev.prison.service.justice.gov.uk"
 PRISONER_SEARCH_HOST="https://prisoner-offender-search-dev.prison.service.justice.gov.uk"
 KEYWORKER_API_HOST="https://keyworker-api-dev.prison.service.justice.gov.uk"
+COMMUNITY_API_HOST="https://community-api.test.delius.probation.hmpps.dsd.io"
