reduce cache expiry to 1 minute for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,12 +350,15 @@ workflows:
               only:
                 - main
                 - preproduction
+                - cache-timeout-1-minute
       - deploy_staging:
           requires:
             - build_and_push_docker_image
           filters:
             branches:
-              only: main
+              only:
+                - main
+                - cache-timeout-1-minute
       - test_staging:
           requires:
             - build_and_push_docker_image
